<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="juliane.s.c.cadastrocliente.Agendar"
    android:background="@drawable/fundo_cabelo">

    <EditText
        android:id="@+id/et_nome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="47dp"
        android:ems="10"
        android:hint="@string/et_nome"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="@dimen/tamanho_fonte"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_numero"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:textColor="@color/black"
        android:hint="@string/et_numero"
        android:inputType="number"
        android:textSize="@dimen/tamanho_fonte"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_nome" />

    <EditText
        android:id="@+id/et_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="41dp"
        android:ems="10"
        android:textSize="@dimen/tamanho_fonte"
        android:textColor="@color/black"
        android:hint="@string/et_data"
        android:inputType="date"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_numero" />

    <Spinner
        android:id="@+id/sp_escolha"
        android:layout_width="369dp"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/botao"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toBottomOf="@+id/et_horario" />

    <Button
        android:id="@+id/btn_agendar"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:textSize="@dimen/tamanho_fonte"
        android:text="@string/btn_agendar"
        android:background="@drawable/botao"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="450dp"
        tools:layout_editor_absoluteX="251dp" />

    <EditText
        android:id="@+id/et_horario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="31dp"
        android:ems="10"
        android:hint="@string/et_hora"
        android:textSize="@dimen/tamanho_fonte"
        android:inputType="numberDecimal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_data" />

</android.support.constraint.ConstraintLayout>
