<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="juliane.s.c.cadastrocliente.Orcamento"
    android:background="@drawable/fundo_pinceis">

    <EditText
        android:id="@+id/to_et_preco"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="64dp"
        android:ems="10"
        android:hint="@string/to_et_preco"
        android:inputType="numberDecimal"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="@dimen/tamanho_fonte"
        android:textColor="@color/black"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="39dp"
        app:layout_constraintTop_toBottomOf="@+id/to_sp_servicos" />

    <Spinner
        android:id="@+id/to_sp_servicos"
        android:layout_width="365dp"
        android:layout_height="44dp"
        android:layout_marginLeft="8dp"
        android:background="@drawable/botao"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textColor="@color/black"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/to_et_nome_resp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.666" />

    <Button
        android:id="@+id/to_btn_cadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/to_btn_cadastrar"
        android:textColor="@color/black"
        android:background="@drawable/botao"
        android:textSize="@dimen/tamanho_fonte"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/to_btn_texto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/to_btn_texto"
        android:textSize="@dimen/tamanho_fonte"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/botao"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/to_et_nome_resp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:hint="@string/to_et_nome_resp"
        android:textSize="@dimen/tamanho_fonte"
        android:inputType="textPersonName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/to_btn_texto" />
</android.support.constraint.ConstraintLayout>
